# PatchWorkPlot

./: GPLv3  LICENSE  MANIFEST.in  PatchWorkPlot.py  PatchworkPlot.py  README.md  generate_alignment_files.py  generate_igdetective_config.py  generate_joint_dotplot.py  pyproject.toml
cats_config/: 03mPumCon1.1_hap2.bed  05mFelCat1.bed  05mLynRuf1.bed  config.csv
cats_patchworkplot/: alignment_stats.csv
cats_patchworkplot/pairwise_alignments/: pair_0-01mNeoNeb1_1-02mPumCon1.1_hap1.tsv  pair_0-01mNeoNeb1_2-03mPumCon1.1_hap2.tsv  pair_0-01mNeoNeb1_3-04mLynRuf1.tsv  pair_0-01mNeoNeb1_4-05mFelCat1.tsv  pair_1-02mPumCon1.1_hap1_2-03mPumCon1.1_hap2.tsv  pair_1-02mPumCon1.1_hap1_3-04mLynRuf1.tsv  pair_1-02mPumCon1.1_hap1_4-05mFelCat1.tsv  pair_2-03mPumCon1.1_hap2_3-04mLynRuf1.tsv  pair_2-03mPumCon1.1_hap2_4-05mFelCat1.tsv  pair_3-04mLynRuf1_4-05mFelCat1.tsv  self_1-02mPumCon1.1_hap1.tsv  self_2-03mPumCon1.1_hap2.tsv  self_3-04mLynRuf1.tsv  self_4-05mFelCat1.tsv
py/: .gitignore  config_utils.py  data_utils.py  minimap2_utils.py  paf_utils.py  tool_builder.py  utils.py  visualization_builder.py  visualization_utils.py
test_dataset/: config_example.csv
test_dataset/01_mPumCon1.1_hap1_igdetective/: combined_genes_IGH.txt  combined_genes_IGK.txt  combined_genes_IGL.txt  combined_genes_TRA.txt  combined_genes_TRB.txt
test_dataset/01mNeoNeb1_igdetective/: combined_genes_IGH.txt  combined_genes_TRA.txt
test_dataset/02_mPumCon1.1_hap2_igdetective/: combined_genes_IGK.txt  combined_genes_TRA.txt  combined_genes_TRB.txt
test_dataset/beds/: 01_mPumCon1.1_hap1.bed  (+1 more)
(+48 files in other folders)
