[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PatchWorkPlot"
description = "A tool for visualization of pairwise alignments of multiple sequences"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"pandas>=2.2,<3.0",
"biopython>=1.85,<2.0",
"matplotlib>=3.10,<4.0",
"seaborn>=0.13,<0.14",
"numpy>=1.24,<2.0"
]

[project.scripts]
patchworkplot = "PatchWorkPlot:cli"

[tool.setuptools]
py-modules = ["PatchWorkPlot"]
include-package-data = true

[tool.setuptools.package-data]

[tool.setuptools.packages.find]
include = ["py*"]
